feat: colors setup and logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,15 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@theme {
+  --color-light-primary: #4886B5;
+  --color-light-accent: #FFB347;
+  --color-light-surface: #F7F7F7;
+  --color-light-background: #FFF;
+  --color-light-text: #1A1A1A;
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  --color-dark-primary: #82C3F0;
+  --color-dark-accent: #FFD08A;
+  --color-dark-surface: #141414;
+  --color-dark-background: #1E1E1E;
+  --color-dark-text: #E5E5E5;
 }
